# organelle-morphology

./: .gitignore  .pre-commit-config.yaml  COPYING.md  README.md  README.md.bkp  environment-dev.yml  lcov.info  pyproject.toml  requirements-dev.txt  zensical.toml
.github/workflows/: ci.yml  docs.yml  draft.yml  pypi.yml
doc/: api.rst  conf.py  index.rst
docs/: api.md  concepts.md  contributing.md  hpc.md  index.md  installation.md  markdown.md  usage.md
docs/api/: block_mesher.md  distance_calc.md  index.md  organelle.md  project.md  records.md  source.md  util.md
docs/api/analysis/: curvature.md  index.md  mcs.md  position.md  profile.md  skeleton.md
notebooks/: WIP_er_morphology.ipynb  demo.ipynb  demo_blender_rendering.ipynb  demo_distance_analysis.ipynb  demo_graphs.ipynb  demo_mcs_analysis.ipynb  demo_mcs_calc.ipynb  demo_skeleton_analysis.ipynb  test.ipynb  testing.ipynb  ui.py
notebooks/__marimo__/session/: ui.py.json
notebooks/layouts/: ui.grid.json
organelle_morphology/: __init__.py  analysis.py  block_mesher.py  cli.py  distance_calc.py  distance_calculations.py  hpc_init.py  mcs_analysis.py  organelle.py  position.py  profile_calculations.py  project.py  records.py  rendering.py  source.py  statistics.py  util.py
scripts/: benchmark.py  cli_benchmark.py  demo.py  helix-demo.py  helix_mcs.py  helix_run.sh  helix_run_small.sh  helix_run_tiny.sh  hpc_example.py  mcs_analysis.py  mesher_test.py  om-helix.slurm
src/app/: analysis.py  ui.py
src/app/layouts/: ui.grid.json
src/organelle_morphology/: __init__.py  analysis.py  curvature_analysis.py  distance_calculations.py  mcs_analysis.py  om_app.py  organelle.py  profile_calculations.py  project.py  records.py  skeleton_analysis.py  source.py  util.py
src/organelle_morphology/cli/: hpc_init.py  om_app.py
src/scripts/: benchmark.py  cli_benchmark.py  demo.py  helix_run_benchmark.sh  helix_run_multi.sh  helix_run_single.sh  hpc_example.py  mcs_analysis.py  mesher_test.py
tests/: conftest.py  synthetic_data_generator.py  test_analysis.py  test_curvature_analysis.py  test_distance_calculations.py  test_hpc_init.py  test_mcs_analysis.py  test_organelle.py  test_organelle_morphology.py  test_position_analysis.py  test_profile_calculations.py  test_project.py  test_records.py  test_skeleton_analysis.py  test_source.py  test_statistics.py  test_util.py
tests/assets/: mcs_df.csv
tests_old/: test_util.py
