[build-system]
requires = ["setuptools>=80", "setuptools-scm>=9"]
build-backend = "setuptools.build_meta"

[project]
name = "organelle_morphology"
description = "Analysis software for segmented 3d microscopy images"
readme = "README.md"
maintainers = [
  { name = "Kai Riedmiller", email = "kai.riedmiller@iwr.uni-heidelberg.de" },
]
dynamic = ["version"]
requires-python = ">=3.11"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  # "bokeh",
  # "dask",
  # "dask-mpi",
  # "marimo",
  # "numpy",
  # "matplotlib",
  # "seaborn",
  # "python-elf",
  # "pyyaml",
  # "rich",
  # "scipy",
  # "scikit-image",
  # "z5py",
  # "trimesh[easy,recommend]",
  # "python-fcl",
  # "xdg",
  # "skeletor",
  # "zmesh",
  # "ipython>=9.14.1",
  # "numba>=0.65",
]
[project.scripts]
om_init_hpc = "organelle_morphology.cli.hpc_init:main"
om_app = "organelle_morphology.cli.om_app:run_marimo_app"

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pre-commit",
  "ruff",
  "zensical",
  "mkdocstrings-python",
]

[tool.ruff]
exclude = ["src/scripts/*.py"]

[tool.marimo.runtime]
output_max_bytes = 300_000_000

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
write_to = "src/organelle_morphology/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.paths]
source = ["src/organelle_morphology"]
